sm8250-common: rootdir: Default Enable uicc_se
It should be true in new versions.
uicc_se_enabled is true by default, but persist property
may remain false after ota

Bug: 149075883
Test: enable uicc_se

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -396,6 +396,9 @@ on post-fs-data
     #Create dir for TUI
     mkdir /data/vendor/tui 0700 system drmrpc
 
+    # Default enable uicc_se
+    setprop persist.vendor.radio.uicc_se_enabled true
+    
 service nqnfcinfo /system/vendor/bin/nqnfcinfo
     class late_start
     group nfc
