sm8250-common: Initialize High Touch Polling Rate support
used to handle our node to force enable Xiaomi's High Touch polling rate mode from kernel

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -165,6 +165,12 @@ on boot
 
 on property:persist.vendor.sys.fp.fod.large_field=1
     write sys/bus/i2c/devices/3-0049/fod_area 1
+    # Touchpanel
+    chown system system /sys/touchpanel/double_tap
+    
+    # Touch Sampling Rate
+    chown system system /sys/devices/virtual/touch/touch_dev/bump_sample_rate
+    chmod 0664 /sys/devices/virtual/touch/touch_dev/bump_sample_rate
 
 on boot && property:persist.vendor.usb.controller.default=*
     setprop vendor.usb.controller ${persist.vendor.usb.controller.default}
